force-app/main/default/objects/NetflixNewMovie__e/NetflixNewMovie__e.object-meta.xml
<CustomObject>
    <label>NetflixNewMovie</label>
    <pluralLabel>NetflixNewMovies</pluralLabel>
</CustomObject>