force-app/main/default/objects/NetflixNewMovie__e/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>