force-app/main/default/objects/NetflixNewMovie__e/fields/iMDB_Rating__c.field-meta.xml
<CustomField>
    <fullName>iMDB_Rating__c</fullName>
    <label>iMDB Rating</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>