force-app/main/default/objects/NetflixNewMovie__e/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <label>ReleaseDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>